# tauri-vue-template

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  template.config.json  vite.config.js
.github/workflows/: tauri-release.yml
assets/: .gitkeep
scripts/: config.js  generate-icons.js  init.js  publish.js
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/plugins/: router.js
src/store/: store.js
src/views/: Home.vue
